[gd_scene load_steps=3 format=3 uid="uid://chlbxh8jd6now"]

[ext_resource type="Script" uid="uid://utadgbt0p1fs" path="res://robot/components/navigation/strafe_nav_comp.gd" id="1_cm8fn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xtgdf"]
radius = 230.0

[node name="StrafeFromClosestEnemy" type="Area2D" groups=["navigation_comp"]]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_cm8fn")
max_swap_time = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xtgdf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
